--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "morgan": "~1.9.1",
+    "node-persist": "^4.0.1",
     "nodemon": "^3.1.0"
   }
 }
